deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apaas-builder
  labels:
    apaas.definesys.com/app-tier: "true"
